Fix overflowing grid areas in <Dashboard />

--- a/orbitez/components/PlanetDataList/PlanetDataList.scss
+++ b/orbitez/components/PlanetDataList/PlanetDataList.scss
@@ -26,7 +26,6 @@
 	&__list {
 		position: relative;
 		max-height: 480px;
-		height: 100%;
 		overflow: auto;
 		padding: 40px 0 48px;
 		background: linear-gradient(120.88deg, rgba(39, 37, 73, 0.46) 17.16%, rgba(39, 37, 73, 0.2) 112.09%);
