--- a/orbitez/components/PlanetList/PlanetList.scss
+++ b/orbitez/components/PlanetList/PlanetList.scss
@@ -2,7 +2,6 @@
 	width: 100%;
 	max-width: 350px;
 	//min-height: 100px;
-	margin: auto;
 
 	&__title {
 		margin-bottom: 15px;
@@ -11,9 +10,8 @@
 
 	&__list {
 		position: relative;
-		max-height: 480px;
-		//min-height: 80%;
-		height: 100%;
+		min-height: 8rem;
+		max-height: 30rem;
 		overflow: auto;
 		padding: 40px 0 48px;
 		background: linear-gradient(120.88deg, rgba(39, 37, 73, 0.46) 17.16%, rgba(39, 37, 73, 0.2) 112.09%);
